examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-web
  namespace: applications
  labels:
    external-dns: enabled
  annotations:
    external-dns.kubernetes.io/hostname: web.k8s.example.org
    external-dns.kubernetes.io/ttl: "300"
spec:
  type: LoadBalancer
  selector:
    app: example-web
  ports:
    - port: 80
      targetPort: 8080
