examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-web
  namespace: applications
  labels:
    external-dns: enabled
  annotations:
    external-dns.kubernetes.io/ttl: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: ingress.k8s.example.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-web
                port:
                  number: 80
